<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="server_addr">http://1-dot-servermyparkinsons.appspot.com/</string>
    <!--<string name="server_addr">http://10.31.238.242:8888/</string>-->
    <string name="app_name">My Parkinson\'s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage">Welcome to MyParkinson\'s!</string>
    <string name="exerciseButton">Exercise!</string>
    <string name="speechButton">Speech!</string>
    <string name="title_activity_exercise_log">ExerciseLogActivity</string>
    <string name="speechCheckBox">Speech Training Done</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="phraseTitle">Read this phrase aloud:</string>
    <string name="buttonStart">Start Speech Exercise</string>
    <string name="buttonPlay">Play Recording</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="intent_preference_title">MyParkinson\'s Webpage</string>
    <string name="intent_preference_summary">http://myparkinsonsapp.weebly.com/</string>
    <string name="misc_preference_title">Misc.</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_summary">Name, Personal Info, etc</string>
    <string name="addsettings_title">Additional Settings</string>
    <string name="pref_summary">Set Time for Speech Activity Reminder</string>
    <string name="pref_title">Speech Activity Reminder</string>
    <string name="newphrase">Generate a new phrase</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="profile_photo_file_name">profile_photo</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="change">CHANGE</string>
    <string name="name">Name</string>
    <string name="nameFiller">Your Name Here</string>
    <string name="email">Email</string>
    <string name="emailFiller">Your Email Here</string>
    <string name="phone">Phone</string>
    <string name="phoneFiller">Your Phone Number Here</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="dartmouthClass">Dartmouth Class</string>
    <string name="classFiller">Your Class Year</string>
    <string name="major">Major</string>
    <string name="majorFiller">Your Major Here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_camera">Camera</string>
    <string name="alert_dialog_two_buttons_title">title</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="title_activity_dialog_helper">DialogHelper</string>
    <string name="title_activity_dialogview">DialogView</string>
    <string name="title_save_data">Store Activity Data</string>
    <string name="summary_save_data">Save the daily activity data recorded by the app.</string>
    <string name="title_child_preference">Delete All Data</string>
    <string name="summary_child_preference">This should eventually launch a dialog fragment.</string>
    <string name="comment_edittext_dialogtitlesettings">stuff</string>
    <string name="age">Age</string>
    <string name="ageFiller">Your Age Here</string>
    <string name="city">City</string>
    <string name="cityFiller">Your City Here</string>
    <string name="state">State</string>
    <string name="stateFiller">Your State Here</string>
    <string name="app_name_special">My Parkinson\'s</string>
    <string name="delete_alert_dialog_title">Delete all saved data?</string>
    <string name="delete_data_title">Delete Stored Data</string>
    <string name="delete_data_summary">Delete all exercise and speech data stored in the app.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow_tracking_title">Allow Accelerometer Tracking</string>
    <string name="allow_tracking_summery">Enable/Disable the accelerometer exercise tracking.</string>
    <string name="speech_alert_title">Speech Reminder Notification</string>
    <string name="speech_alert_summery">Enable/Disable the daily speech activity reminder.</string>
    <string name="exerciseMessage">Todays Exersice Progress:</string>
    <string name="title_activity_exercise_video">ExerciseVideoActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_exercise_video_choices">ExerciseVideoChoices</string>
    <string name="title_activity_new_video">NewVideoActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
