<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".ProfileActivity">

    <!--<ScrollView-->
        <!--android:id="@+id/scrollView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_gravity="center_horizontal">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/profilePhotoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profilePhoto"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />

                <Button
                    android:id="@+id/changePhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/change" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameFiller"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailFiller"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/phoneTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/phoneFiller"
                android:inputType="phone"
                android:phoneNumber="true" />

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/genderRadioGroup"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.29"
                    android:checked="false"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="45dp"
                    android:layout_weight="0.29"
                    android:checked="false"
                    android:text="@string/Female" />
            </RadioGroup>

            <TextView
                android:id="@+id/classLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dartmouthClass"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/classTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/classFiller"
                android:inputType="number" />

            <TextView
                android:id="@+id/majorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/majorTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/majorFiller" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:text="@string/save" />


                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>


    <!--</ScrollView>-->


</ScrollView>
