<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:text="@string/welcomeMessage" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@android:style/TextAppearance.Material.Headline" />


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/progressBarText"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/exerciseButton"
        android:textAlignment="center"
        android:id="@+id/exerciseButton"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/speechButton"
        android:textAlignment="center"
        android:id="@+id/speechButton"/>

</LinearLayout>
